.provarCaches/00D410000011HE0EAM/objects/asp04__PaymentSchedule__c.object
<CustomObject>
    <fields>
        <fullName>asp04__Authorisation_Status__c</fullName>
        <formula>TEXT( asp04__Authorisation__r.asp04__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A formula reflecting the status of the associated Authorisation.</inlineHelpText>
        <label>Authorisation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Authorisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A link to the related Authorisation object. A Payment Schedule must have and entry here in order to process a payment.</inlineHelpText>
        <label>Authorisation</label>
        <referenceTo>asp04__Authorisation__c</referenceTo>
        <relationshipLabel>Payment Schedules</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>asp04__Final_Payment_Date__c</fullName>
        <inlineHelpText>After this date no more payments will be taken from this Payment Schedule</inlineHelpText>
        <label>Final Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asp04__Frequency__c</fullName>
        <inlineHelpText>Indicates how often payments will be raised</inlineHelpText>
        <label>Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>asp04__Last_Payment_Date__c</fullName>
        <inlineHelpText>The date on which the last payment request was raised.</inlineHelpText>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asp04__Next_Payment_Date__c</fullName>
        <description>The date that the next payment will occur on</description>
        <inlineHelpText>The due date of the first or next payment. The system will update this date automatically. On the final day, it may be updated to a date after the final payment date; this is expected and no future payments will be taken unless the schedule is reinstated.</inlineHelpText>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asp04__Next_Process_Date__c</fullName>
        <formula>IF( asp04__Payment_Route_Selected__c  = &apos;Direct Debit&apos;, asp04__Next_Payment_Date__c - $Setup.asp04__AsperatoOneSettings__c.asp04__BACS_Delay__c, asp04__Next_Payment_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date that the next processing will occur taking into account delays caused by the Direct Debit system</inlineHelpText>
        <label>Next Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asp04__Payment_Route_Selected__c</fullName>
        <formula>TEXT(asp04__Authorisation__r.asp04__Payment_Route_Selected__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A formula reflecting the selected payment route of the associated Authorisation.</inlineHelpText>
        <label>Payment Route Selected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Regular_Amount__c</fullName>
        <description>The amount to be collected</description>
        <inlineHelpText>The amount of the payment charge. The currency will be determined based on the currency of the Payment Schedule record in a multi-currency org or from the org default currency for a single currency org.</inlineHelpText>
        <label>Regular Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>asp04__Status__c</fullName>
        <inlineHelpText>Indicates whether the Payment Schedule is in force (Active) or otherwise.  No new payment requests will be raised while a Payment Schedule is not in force.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Schedule</label>
    <listViews>
        <fullName>asp04__Active_Payment_Schedules</fullName>
        <columns>NAME</columns>
        <columns>asp04__Regular_Amount__c</columns>
        <columns>asp04__Next_Payment_Date__c</columns>
        <columns>asp04__Frequency__c</columns>
        <columns>asp04__Payment_Route_Selected__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>asp04__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Payment Schedules</label>
    </listViews>
    <listViews>
        <fullName>asp04__All</fullName>
        <columns>NAME</columns>
        <columns>asp04__Status__c</columns>
        <columns>asp04__Regular_Amount__c</columns>
        <columns>asp04__Next_Payment_Date__c</columns>
        <columns>asp04__Frequency__c</columns>
        <columns>asp04__Payment_Route_Selected__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{000000000}</displayFormat>
        <label>Payment Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>asp04__In_force_status_test</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(asp04__Status__c, &apos;Active&apos;), ISBLANK( asp04__Authorisation__c ))</errorConditionFormula>
        <errorMessage>You must have an Authorisation in place before you can set the Subscription Status to &apos;Active&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>asp04__PreventFromZeroOrNegativeAmountEntry</fullName>
        <active>true</active>
        <description>Any negative or Zero value entered in regular amount on Payment schedule records are not accepted.</description>
        <errorConditionFormula>asp04__Regular_Amount__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>asp04__Regular_Amount__c</errorDisplayField>
        <errorMessage>Amount must be greater than zero.</errorMessage>
    </validationRules>
</CustomObject>